--- a/app/src/main/res/layout/pause_menu.xml
+++ b/app/src/main/res/layout/pause_menu.xml
@@ -6,26 +6,26 @@
     android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/end_floor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:background="@android:color/background_light"/>
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center">
         <Button
-            android:id="@+id/end_restart"
+            android:id="@+id/pause_restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="40dp"
             android:text="Restart"/>
 
         <Button
-            android:id="@+id/end_exit"
+            android:id="@+id/pause_resume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="40dp"
+            android:text="Resume"/>
+
+        <Button
+            android:id="@+id/pause_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="40dp"
