--- a/app/src/main/res/layout/multi_player_activity.xml
+++ b/app/src/main/res/layout/multi_player_activity.xml
@@ -8,6 +8,10 @@
         android:id="@+id/bluetooth_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/debug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:layout_width="match_parent"
