--- a/app/src/main/res/layout/single_player_activity.xml
+++ b/app/src/main/res/layout/single_player_activity.xml
@@ -3,6 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:screenOrientation="landscape"
-    android:id="@+id/gameLayout">
+    android:id="@+id/single_player_layout">
 
 </RelativeLayout>
